--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.0",
     "discord.js": "^11.3.2",
     "mysql": "^2.15.0",
     "request": "^2.81.0",
